# controllers/Report.js
@@ -11,8 +11,10 @@
   var saveReport = function(params, callback){
     var _observations = [];
     var _zones = [];
+    var _plants = [];
     var _year;
     var _authority;
+    var _operator;
 
     params.zones = params.zones || [];
     if(params.year){
@@ -34,51 +36,82 @@
           }
           cb2();
         });
-      },
-      function(err) {
-        async.each(params.zones,
-          function(zone, cb3) {
-            models.Zone.model.findOne({name: zone}, function(err, output) {
+      }, function(err) {
+        async.each(params.plants,
+          function(plant, cb4) {
+            var regex = new RegExp(["^", plant, "$"].join(""), "i");
+            models.Location.model.findOne({name: regex}, function(err, output) {
               if(!err && output){
-                _zones.push(output);
+                _plants.push(output);
               }
-              cb3();
+              cb4();
             });
-          },
-          function(err) {
-            models.Company.model.findOne({code: params.authority}, function(err, output) {
-              if(err){
-                callback(err, null);
-              } else {
-                _authority = output;
-                var _report = {
-                  name: params.name,
-                  observations: _observations,
-                  sources: params.sources || null,
-                  authority: _authority || null,
-                  year: _year || null,
-                  zones: _zones || null,
-                  entered_by: params.entered_by
-                };
-                models.Report.model.create(_report, function(err, result) {
-                  if (err) {
+          }, function(err) {
+            async.each(params.zones,
+              function(zone, cb3) {
+                models.Zone.model.findOne({name: zone}, function(err, output) {
+                  if(!err && output){
+                    _zones.push(output);
+                  }
+                  cb3();
+                });
+              }, function(err) {
+                models.Company.model.findOne({code: params.authority}, function(err, output) {
+                  if(err){
                     callback(err, null);
                   } else {
-                    callback(null,{
-                      name: result.name,
-                      id: result._id
+                    _authority = output;
+                    models.Company.model.findOne({code: params.operator}, function(err, output2) {
+                      if(err){
+                        callback(err, null);
+                      } else {
+                        _operator = output2;
+                        var _report = {
+                          name: params.name,
+                          observations: _observations,
+                          sources: params.sources,
+                          authority: _authority,
+                          operator: _operator,
+                          year: _year,
+                          zones: _zones,
+                          plants: _plants,
+                          entered_by: params.entered_by
+                        };
+                        models.Report.model.create(_report, function(err, result) {
+                          if (err) {
+                            callback(err, null);
+                          } else {
+                            callback(null,{
+                              name: result.name,
+                              id: result._id
+                            });
+                          }
+                        });
+                      }
                     });
                   }
-                });
-              }
-            }
-          );
-        });
+                }
+              );
+            });
+          });
     });
   };
 
   // Options for the mongoose query
-  var populateoptions = [{
+  var populateoptions = [
+    {
+      path: 'plants',
+      model: 'Location',
+      select: 'name description geometry type access-_id'
+    }, {
+      path: 'authority',
+      model: 'Company',
+      select: 'name url type -_id'
+    }, {
+      path: 'operator',
+      model: 'Company',
+      select: 'name url type -_id'
+    }, {
     path: 'observations',
     select: 'value uom code -_id',
     populate: [{
@@ -93,7 +126,6 @@
   }];
   module.exports.getreport = function(req, res, next) {
     var params = req.swagger.params;
-    console.log(params);
     var point = {
       type: "Point",
       coordinates: [ params.lon.value, params.lat.value ]
@@ -111,7 +143,7 @@
         //get the report for this zone
         models.Report.model.findOne().where({'zones': {$in: [result._id] }}).
         sort({"issued": -1, "year": -1}).
-        select('name authority observations plants year').
+        select('name authority operator observations plants year').
         populate(populateoptions).exec(function(err, report){
           if(err){
             next(err);
@@ -130,9 +162,27 @@
                 },
                 geometry: zone.geometry,
               };
+              var tempplants = [];
+              if(out.plants){
+                for (var i=0; i<out.plants.length; i++) {
+                  var tempplant = {
+                    type: "Feature",
+                    properties: {
+                      "name": out.plants[i].name,
+                      "access": out.plants[i].access,
+                      "type": out.plants[i].type
+                    },
+                    geometry: out.plants[i].geometry
+                  };
+                  tempplants.push(tempplant);
+                }
+              }
+              out.plants = tempplants;
             } else {
               delete out.zone;
+              delete out.plants;
             }
+
             res.setHeader('content-type', 'application/json');
             res.setHeader('charset', 'utf-8');
             res.end(JSON.stringify(out, null, 2));
